# seetrex-verifier

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/format/: Cargo.toml  NOTICE  README.md
crates/format/src/: hashing.rs  lib.rs  types.rs
crates/verifier/: Cargo.toml  NOTICE  README.md
crates/verifier/src/: canonical.rs  chain.rs  chain_export.rs  evidence.rs  hash.rs  lib.rs  package.rs  rulesets.rs  scope.rs  types.rs
crates/verifier/tests/: bin_e2e.rs
docs/: AUDITOR_KIT.md  SPEC_VERDICT_PACKAGE_V1.md
examples/verdict-package/: .gitattributes  README.md  example-audit-tenant-chain.json
examples/verdict-package/package/: manifest.json  ruleset.json  verdict.json
examples/verdict-package/package/evidence/: 762e8074-96f5-4764-aa59-aa3c6fb92a7e.json
keys/: release-signing-pubkey.asc
