[workspace]
resolver = "2"
members = ["crates/format", "crates/verifier"]

[workspace.package]
edition = "2021"
authors = ["Seetrex"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1.0"
hex = "0.4"
